8004902: correctness fixes motivated by contended locking work (6607129)

Misc correctness fixes

Reviewed-by: acorn, dholmes, dice, sspitsyn